--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "name": "imuncle",
-    "repo": "gitblog",
-    "client_id": "4148cca0f91e524d1a42",
-    "client_secret": "637c2c993cccf79c51a0a215f538932edfdcb9b0",
-    "title": "Gitblog",
-    "instruction": "基于GitHub issue的个人博客模板",
+    "name": "zlw",
+    "repo": "zlw1225.github.io",
+    "client_id": "edcb177f31650e56ff77",
+    "client_secret": "44a47b77a903614707cb3d3fb3d63216466a0a7e",
+    "title": "blog",
+    "instruction": "",
     "server_link": "http://119.23.8.25/gh-oauth-server.php",
     "filter": {
         "creator": "all",
